--- a/templates/index.html
+++ b/templates/index.html
@@ -22,75 +22,45 @@
                     <div class="list-group-item">
                         <span class="label btn-blue" style="padding: 8px;"></span>
 
-                        <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                信息学院 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">计算机网络</a></li>
-                                <li class="disabled"><a href="/gz/">光照</a></li>
-                                <li><a href="/tx/">通信</a></li>
-                                <li><a href="/au/">自动化</a></li>
-                                <li><a href="/xj/">信计</a></li>
-                            </ul>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">软件编程
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">集成测控
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">机械学院
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">管理学院
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">艺术设计
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">服装设计
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">外国语
+                            </a>
+                        </div>
+                        <div class="btn-group">
+                            <a type="button" class="btn btn-default" href="/cs/">生物学院
+                            </a>
                         </div>
                         <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle disabled"
-                                    data-toggle="dropdown">
-                                管理学院 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">工商</a></li>
-                                <li><a href="/gz/">信管</a></li>
-                                <li><a href="/tx/">国贸</a></li>
-                                <li><a href="/au/">人力</a></li>
-                                <li><a href="/xj/">物流</a></li>
-                                <li><a href="/xj/">电商</a></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle disabled"
-                                    data-toggle="dropdown">
-                                艺术学院 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">视觉传达</a></li>
-                                <li><a href="/gz/">景观设计</a></li>
-                                <li><a href="/tx/">数字媒体</a></li>
-                                <li><a href="/ds/">雕塑</a></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle disabled"
-                                    data-toggle="dropdown">
-                                服装学院 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">服装设计</a></li>
-                                <li><a href="/gz/">艺术设计</a></li>
-                                <li><a href="/tx/">纺织工程</a></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle disabled"
-                                    data-toggle="dropdown">
-                                外语学院 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">日语</a></li>
-                                <li><a href="/gz/">英语</a></li>
-                                <li><a href="/tx/">对外汉语</a></li>
-                            </ul>
-                        </div>
-                        <div class="btn-group dropdown">
-                            <button type="button" class="btn btn-default dropdown-toggle disabled"
+                            <button type="button" class="btn btn-default dropdown-toggle"
                                     data-toggle="dropdown">
                                 社团 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="/cs/">DlpuCsdn</a></li>
-                                <li><a href="/gz/"></a></li>
-                                <li><a href="/tx/"></a></li>
+                                <li><a href="/cs/">CSDN高校俱乐部</a></li>
                             </ul>
                         </div>
                     </div>
@@ -129,7 +99,7 @@
             <a href="https://github.com/tcitry" target="_blank" style="margin-left: 10px;margin-right: 10px">联系作者</a>
         </div>
         <div>
-            由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="http://digitalocean.com"
+            由<a href="http://qiniu.com" target="_blank">七牛云</a>提供静态存储，<a href="https://www.digitalocean.com/?refcode=691aa9b4866d"
                                                                          target="_blank">DigitalOcean</a>提供服务器
         </div>
         <div>
